--- a/package.json
+++ b/package.json
@@ -1,16 +1,35 @@
 {
-  "name": "task1",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "name": "react_task2",
+    "version": "1.0.0",
+    "description": "App built as task 2 for the react mentoring program",
+    "main": "index.js",
+    "scripts": {
+        "build": "webpack --config ./webpack.config.js --mode production --env.prod",
+        "start:dev": "webpack-dev-server --config ./webpack.config.dev.js --mode development --env.dev",
+        "start": "webpack-dev-server --config ./webpack.config.js --mode production --env.prod",
+        "test": "jest"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "babel-core": "^6.26.0",
+        "babel-jest": "^22.4.3",
+        "babel-loader": "^7.1.4",
+        "babel-preset-env": "^1.6.1",
+        "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-2": "^6.24.1",
+        "jest": "^22.4.3",
+        "react-test-renderer": "^16.3.2",
+        "webpack": "^4.5.0",
+        "webpack-cli": "^2.0.14",
+        "webpack-dev-server": "^3.1.3"
+    },
+    "dependencies": {
+        "react": "^16.3.2",
+        "react-dom": "^16.3.2",
+        "react-redux": "^5.0.7",
+        "react-router-dom": "^4.2.2",
+        "redux": "^4.0.0"
+    }
 }
