--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "babel-preset-env": "^1.6.1",
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
+        "bootstrap": "^4.1.0",
         "compression-webpack-plugin": "^1.1.11",
         "css-loader": "^0.28.11",
         "enzyme": "^3.3.0",
