--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
         "start:dev": "npm run wds -- --config ./webpack.config.dev.js --mode development",
         "start": "simplehttpserver dist",
         "test": "jest",
-        "test:coverage": "npm run test -- --coverage"
+        "test:coverage": "npm run test -- --coverage",
+        "cypress:open": "cypress open"
+    },
+    "jest": {
+        "setupFiles": [
+            "./test/jestsetup.js"
+        ],
+        "moduleNameMapper": {
+            "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.js",
+            "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
+        }
     },
     "keywords": [
         "react",
@@ -44,7 +54,8 @@
         "webpack-bundle-analyzer": "^2.11.1",
         "webpack-cli": "^2.0.14",
         "webpack-dev-server": "^3.1.3",
-        "classname": "0.0.0"
+        "classname": "0.0.0",
+        "cypress": "^2.1.0"
     },
     "dependencies": {
         "react": "^16.3.2",
