--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
         "bootstrap": "^4.1.0",
+        "classname": "0.0.0",
         "compression-webpack-plugin": "^1.1.11",
         "css-loader": "^0.28.11",
+        "cypress": "^2.1.0",
         "enzyme": "^3.3.0",
         "enzyme-adapter-react-16": "^1.1.1",
         "jest": "^22.4.3",
@@ -53,9 +55,7 @@
         "webpack": "^4.5.0",
         "webpack-bundle-analyzer": "^2.11.1",
         "webpack-cli": "^2.0.14",
-        "webpack-dev-server": "^3.1.3",
-        "classname": "0.0.0",
-        "cypress": "^2.1.0"
+        "webpack-dev-server": "^3.1.3"
     },
     "dependencies": {
         "react": "^16.3.2",
