--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "cypress": "^2.1.0",
         "enzyme": "^3.3.0",
         "enzyme-adapter-react-16": "^1.1.1",
+        "fetch-mock": "^6.3.0",
         "jest": "^22.4.3",
         "react-test-renderer": "^16.3.2",
         "simplehttpserver": "^0.1.1",
