--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
         "webpack-dev-server": "^3.1.3"
     },
     "dependencies": {
+        "es6-promise": "^4.2.4",
+        "isomorphic-fetch": "^2.2.1",
         "react": "^16.3.2",
         "react-dom": "^16.3.2",
         "react-redux": "^5.0.7",
