--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: node_js
 node_js:
-  - "9"
+  - 9
+cache:
+  directories:
+    - ~/.npm
+    - node_modules
 branches:
   only:
   - task4
+script:
+  - npm test
+  - npm run cypress:open --record
