--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "fetch-mock": "^6.3.0",
         "jest": "^22.4.3",
         "react-test-renderer": "^16.3.2",
+        "redux-immutable-state-invariant": "^2.1.0",
         "simplehttpserver": "^0.1.1",
         "style-loader": "^0.21.0",
         "webpack": "^4.5.0",
@@ -65,6 +66,7 @@
         "react-dom": "^16.3.2",
         "react-redux": "^5.0.7",
         "react-router-dom": "^4.2.2",
-        "redux": "^4.0.0"
+        "redux": "^4.0.0",
+        "redux-logger": "^3.0.6"
     }
 }
