--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "start": "simplehttpserver dist",
         "test": "jest",
         "test:coverage": "npm run test -- --coverage",
-        "cypress:open": "cypress open"
+        "test:e2e": "concurrently --kill-others \"npm run start:dev\" \"cypress open\""
     },
     "jest": {
         "setupFiles": [
@@ -44,6 +44,7 @@
         "bootstrap": "^4.1.0",
         "classname": "0.0.0",
         "compression-webpack-plugin": "^1.1.11",
+        "concurrently": "^3.5.1",
         "css-loader": "^0.28.11",
         "cypress": "^2.1.0",
         "enzyme": "^3.3.0",
@@ -52,6 +53,7 @@
         "jest": "^22.4.3",
         "react-test-renderer": "^16.3.2",
         "redux-immutable-state-invariant": "^2.1.0",
+        "redux-mock-store": "^1.5.1",
         "simplehttpserver": "^0.1.1",
         "style-loader": "^0.21.0",
         "webpack": "^4.5.0",
