--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "react-router-dom": "^4.2.2",
         "redux": "^4.0.0",
         "redux-logger": "^3.0.6",
+        "redux-persist": "^5.9.1",
         "redux-thunk": "^2.2.0"
     }
 }
