--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "start": "simplehttpserver dist",
         "test": "jest",
         "test:coverage": "npm run test -- --coverage",
-        "test:e2e": "concurrently --kill-others \"npm run start:dev\" \"cypress open\""
+        "test:e2e": "concurrently --kill-others \"npm run start:dev\" \"cypress open\"",
+        "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls"
     },
     "jest": {
         "setupFiles": [
@@ -45,6 +46,7 @@
         "classname": "0.0.0",
         "compression-webpack-plugin": "^1.1.11",
         "concurrently": "^3.5.1",
+        "coveralls": "^3.0.1",
         "css-loader": "^0.28.11",
         "cypress": "^2.1.0",
         "enzyme": "^3.3.0",
