--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "babel-core": "^6.26.0",
         "babel-jest": "^22.4.3",
         "babel-loader": "^7.1.4",
+        "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.6.1",
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
