Code review fixes

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,6 @@ branches:
   - task5
   - task6_from5
 script:
-  - npm test
+  - npm test -- --coverage
+after_script:
+  - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls
