--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "wds": "webpack-dev-server",
         "start:dev": "npm run wds -- --config ./webpack.config.dev.js --mode development",
         "start": "simplehttpserver dist",
+        "start:exp": "babel-node index.js",
         "test": "jest",
         "test:coverage": "npm run test -- --coverage",
         "test:e2e": "concurrently --kill-others \"npm run start:dev\" \"cypress open\"",
@@ -36,6 +37,7 @@
     "author": "Uzair Ahmed",
     "license": "ISC",
     "devDependencies": {
+        "babel-cli": "^6.26.0",
         "babel-core": "^6.26.0",
         "babel-jest": "^22.4.3",
         "babel-loader": "^7.1.4",
@@ -66,6 +68,7 @@
     },
     "dependencies": {
         "es6-promise": "^4.2.4",
+        "express": "^4.16.3",
         "isomorphic-fetch": "^2.2.1",
         "react": "^16.3.2",
         "react-dom": "^16.3.2",
